--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+downloaded_files/*
+!downloaded_files/.gitkeep
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
