--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-downloaded_files/*
-!downloaded_files/.gitkeep
+/src/main/resources/downloaded_files/*
+!/src/main/resources/downloaded_files/.gitkeep
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
